# marketpulse_ros2

./: .gitignore  README.md  turtlesim.yaml
.cache/clangd/index/: composed.cpp.846F20EA005DAD27.idx  content_filtering.cpp.8264C452DE55AD61.idx  executor_random_order.cpp.494973AE2BE1E240.idx  lambda.cpp.44DE62B87D01329D.idx  lambda.cpp.47BC24C7D1034FF5.idx  lambda.cpp.60F13F947FE2BE43.idx  listener.cpp.1A666817A1FBA86F.idx  listener.hpp.939A2183D32BA185.idx  main.cpp.1CAA2D64FA9561CC.idx  main.cpp.224E98EE527B0679.idx  main.cpp.E85582630FBBAD0C.idx  member_function.cpp.651A95907E1B10A7.idx  member_function.cpp.8A900FECC4D2F4E0.idx  member_function.cpp.D1FA2C1D3EE021E7.idx  member_function_with_topic_statistics.cpp.318C387D49CDE197.idx  member_function_with_type_adapter.cpp.532899E1999629B6.idx  member_function_with_type_adapter.cpp.8315EDDB150C8106.idx  member_function_with_unique_network_flow_endpoints.cpp.C7976B31C3163452.idx  member_function_with_unique_network_flow_endpoints.cpp.F806C574448E1F8B.idx  member_function_with_wait_for_all_acked.cpp.58EBD8A6CC29148B.idx  member_functions.cpp.264B4D4A3BD20879.idx  member_functions.cpp.D34A48EE1135D886.idx  multithreaded_executor.cpp.4B2A7172953DD023.idx  my_first_node.cpp.DC352090FEEDE629.idx  not_composable.cpp.3EEBB2915881B72A.idx  not_composable.cpp.5FAD177C759C22BD.idx  not_composable.cpp.7A4A283BEB1EA3A6.idx  not_composable.cpp.9F79B31BD85178E8.idx  not_composable_with_cancel.cpp.A09C222EEFEBBBA4.idx  not_composable_with_feedback.cpp.431EC0BE98B7A839.idx  numeric.cpp.3FA7D83DA9A35408.idx  ping.cpp.5550E6F5CBA7C5CA.idx  ping_node.cpp.FC038F681B7E4C5A.idx  ping_node.hpp.C26B5D7FE47943AC.idx  ping_pong.cpp.4D4204E15C71BF85.idx  pong.cpp.605276CAF3A965C5.idx  pong_node.cpp.C8CA62EE8A03DE97.idx  pong_node.hpp.259A6C03E3540635.idx  publisher_node.cpp.9498E26CCB2DD7FD.idx  publisher_node.hpp.CAA47052CC10B3AF.idx  (+23 more)
bag_files/rosbag2_2025_11_29-19_40_29/: metadata.yaml
src/market_data_feed/: CMakeLists.txt  package.xml
src/market_data_feed/config/: market_data_feed.yaml
src/market_data_feed/include/market_data_feed/: market_data_feed_node.hpp
src/market_data_feed/src/: main.cpp  market_data_feed_node.cpp
src/market_data_feed/test/: test_tick_generator.cpp
src/marketpulse_bringup/: CMakeLists.txt  package.xml
src/marketpulse_bringup/launch/: bringup.launch.py
src/marketpulse_bringup/test/: test_integration.py
src/marketpulse_interfaces/: CMakeLists.txt  package.xml
src/marketpulse_interfaces/msg/: Order.msg  PipelineStats.msg  Signal.msg  Tick.msg
src/marketpulse_interfaces/srv/: GetMetrics.srv  Reset.srv  SetBoolPlus.srv  SetRate.srv
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  my_first_node.cpp  number_counter.cpp  numeric.cpp  robot_news_station.cpp  smartphone.cpp
src/my_cpp_pkg/test/: test_add_two_ints_server.py
src/risk_gate/: CMakeLists.txt  package.xml
src/risk_gate/config/: risk_gate.yaml
src/risk_gate/include/risk_gate/: risk_gate_node.hpp
src/risk_gate/src/: main.cpp  risk_gate_node.cpp
src/risk_gate/test/: test_risk_limits.cpp
src/ros2_basics_cpp/my_first_cpp_pkg/: CMakeLists.txt  package.xml
src/strategy_engine/: CMakeLists.txt  package.xml
src/strategy_engine/config/: strategy_engine.yaml
src/strategy_engine/include/strategy_engine/: rolling_window.hpp  strategy_engine_node.hpp
src/strategy_engine/src/: main.cpp  strategy_engine_node.cpp
src/strategy_engine/test/: test_rolling_window.cpp  test_signal_generation.cpp
