<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marketpulse_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and integration tests for MarketPulse pipeline</description>
  <maintainer email="vikaschauhan@todo.todo">vikaschauhan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>market_data_feed</exec_depend>
  <exec_depend>strategy_engine</exec_depend>
  <exec_depend>risk_gate</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>marketpulse_interfaces</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
